# rag

./: .coverage  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CITATION.cff  CLI_POLICY.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  commit_msg_config.py  knowledge_base.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  dependabot.yml  docker.yml  e2e.yml  pages.yml  release.yml
.harper/: .harpertoken
container/: .dockerignore  Dockerfile  README.md
docs/issues/: CODE_QUALITY_SUMMARY.md  README.md  issue_1_formatting.md  issue_2_testing.md  issue_3_ci_deps.md
release-webpage/: index.html
scripts/: commit-msg  commit-msg.py  enhance_changelog.py  fix_lint.sh  lint.py  rewrite_msg.sh  run_ci.sh  run_docker.sh  run_e2e.sh  run_tests.sh  setup_dev.sh  test.py
src/: __init__.py  config.py  data_fetcher.py  main.py  rag_engine.py  rag_pipeline.py  sci_fi_dataset_collector.py  tools.py
src/rag/: __init__.py  __main__.py  __version__.py  config.py  data_fetcher.py  py.typed  rag_engine.py  tools.py
src/rag/ui/: tui.py
src/ui/: tui.py
tests/: __init__.py  test_cli.py  test_config.py  test_data_fetcher.py  test_e2e.py  test_rag_engine.py  test_tools.py
tests/integration/: test_e2e.py
